[package]
name = "termprompt"
description = "A command line prompting library."
version = "0.7.1"
edition = "2018"
authors = [
	"Yash Ladha <admin@yashladha.in>"
]
keywords = ["cli", "menu", "prompt"]
categories = ["command-line-interface"]
license = "MIT"
homepage = "https://github.com/yashladha/dialoguer"
repository = "https://github.com/yashladha/dialoguer"
readme = "README.md"

[dependencies]
console = "0.13.0"
lazy_static = "1"
tempfile = "3"
# `zeroize` of version "0.9.3" is used because it doesn't
# depend on `alloc` crate which is unstable for rustc 1.32.0
# which is currently the minimum supported version for `dialoguer`.
zeroize = { version = "0.9.3", default-features = false, features = ["std"] }
